--- a/css/style.scss
+++ b/css/style.scss
@@ -5603,6 +5603,91 @@ p.original_price {
 }
 
 
+.channel_request_wrap {
+	.count {
+		height: 38px;
+		line-height: 38px;
+		border-bottom: 1px solid $color_01;
+		background-color: #ffffff;
+	}
+
+	.channel_request_list {
+		.list_wrap {
+			background-color: #ffffff;
+			box-shadow: 1px 2px 3px 1px rgb(0 0 0 / 10%);
+			box-sizing: border-box;
+			margin-bottom: 10px;
+			cursor: pointer;
+
+			.detail {
+				padding-top: 16px;
+				padding-bottom: 16px;
+				h2 {
+					font-size: 18px;
+					font-weight: 700;
+					margin-bottom: 15px;
+				}
+
+				.list {
+					display: flex;
+					align-items: center;
+					position: relative;
+					box-sizing: border-box;
+					padding-left: 100px;
+					margin-bottom: 10px;
+					span {
+						width: 20%;
+						font-size: 16px;
+						color: $color_05;
+						display: inline-block;
+						@include position_var;
+					}
+					strong {
+						font-size: 16px;
+						display: inline-block;
+					}
+				}
+
+				p {
+					margin-top: 20px;
+					color: $color_05;
+					font-size: 14px;
+				}
+			}
+
+			.bottom {
+				border: 1px solid #eeeeee;
+				@include display_varible;
+				> div:first-child:after {
+					position: absolute;
+					content: '';
+					top: 50%; right: 0;
+					width: 1px; height: 15px;
+					background-color: #eeeeee;
+					transform: translateY(-50%);
+				}	
+				> div {
+					position: relative;
+					width: 50%; height: 45px;
+					@include display_varible;
+
+					font-size: 16px;
+					color: #888888;
+					i {
+						padding-right: 8px;
+					}
+					span {
+						font-weight: 700;
+						color: #0071F5;
+					}
+				}
+			}
+
+		}
+	}
+}
+
+
 
 
 
