--- a/css/style.scss
+++ b/css/style.scss
@@ -5643,6 +5643,7 @@ p.original_price {
 						@include position_var;
 					}
 					strong {
+						font-weight: 500;
 						font-size: 16px;
 						display: inline-block;
 					}
