--- a/css/style.css
+++ b/css/style.css
@@ -5237,6 +5237,7 @@ p.original_price {
 .channelRequest_detail_wrap .bottom {
   padding-top: 24px;
   padding-bottom: 34px;
+  margin-bottom: 130px;
 }
 .channelRequest_detail_wrap .bottom .list {
   margin-bottom: 16px;
