--- a/css/style.scss
+++ b/css/style.scss
@@ -5760,6 +5760,7 @@ p.original_price {
 	.bottom {
 		padding-top: 24px;
 		padding-bottom: 34px;
+		margin-bottom: 130px;
 
 		.list {
 			margin-bottom: 16px;
