--- a/css/style.scss
+++ b/css/style.scss
@@ -5778,6 +5778,129 @@ p.original_price {
 	}
 }
 
+.estimate_wrap {
+	.estimate_top {
+		background-color: #ffffff;
+		padding-top: 30px;
+		padding-bottom: 30px;
+
+		.date {
+			font-size: 16px;
+			color: $color_04;
+			margin-bottom: 5px;
+		}
+
+		.request_num {
+			font-size: 22px;
+			font-weight: 700;
+		}
+	}
+
+	.estimate_bottom {
+		position: relative;
+
+		.top {
+			background-color: #0071F5;
+			padding-top: 35px;
+			padding-bottom: 75px;
+			color: #ffffff;
+			font-size: 22px;
+			font-weight: 700;
+			text-align: center;
+		}
+
+		.list_wrap {
+			position: absolute;
+			top: 86px; left: 50%;
+			transform: translateX(-50%);
+			width: 100%;
+
+			.count {
+				font-size: 16px;
+				width: 100%;
+				height: 50px;
+				@include display_varible($justify-content: flex-start);
+				background-color: #fafafa;
+				color: $color_04;
+				border-top-left-radius: 15px;
+				border-top-right-radius: 15px;
+
+				span {
+					position: absolute;
+					top: 50%;
+					right: 14px;
+					transform: translateY(-50%);
+					color: #000000;
+				}
+			}
+
+			.list {
+
+				position: relative;
+				padding-top: 15px;
+				padding-bottom: 15px;
+				background-color: #ffffff;
+				border-bottom: 1px solid #eeeeee;
+
+				.estimate_choice {
+					position: absolute;
+					right: 14px; bottom: 15px;
+				}
+
+				.company_nam {
+					position: relative;
+					box-sizing: border-box;
+					padding-right: 60px;
+
+					p {
+						font-size: 18px;
+						i {
+							padding-left: 3px;
+							font-size: 16px;
+							font-weight: 400;
+						}
+					}
+
+					span {
+						position: absolute;
+						color: $color_04;
+						right: 0; top: 50%;
+						transform: translateY(-50%);
+						cursor: pointer;
+					}
+				}
+
+				.position {
+					font-size: 14px;
+					margin-top: 15px;
+					color: $color_05;
+				}
+
+				.detail_info {
+					margin-top: 6px;
+					p {
+						display: inline-block;
+						font-size: 14px;
+						color: $color_05;
+						margin-right: 3px;
+
+						span {
+							color: #0071F5;
+						}
+					}
+				}
+
+				.price {
+					margin-top: 10px;
+					font-size: 22px;
+					font-weight: 700;
+				}
+			}
+		}
+	}
+}
+
+
 
 
 
