--- a/css/style.scss
+++ b/css/style.scss
@@ -5901,6 +5901,180 @@ p.original_price {
 }
 
 
+.estimate_detail_wrap {
+	> div {
+		background-color: #ffffff;
+	}
+
+	.top_cnt {
+		position: relative;
+		padding: 30px 0 40px 114px;
+		margin-bottom: 15px;
+	
+		.company_img {
+			position: absolute;
+			top: 30px; left: 14px;
+			@include image_wrap($width: 90px, $height: 90px, $border-radius: 15px);
+			overflow: hidden;
+		}
+
+		.company_cnt {
+			.name {
+				font-size: 22px;
+				font-weight: 700;
+				margin-bottom: 20px;
+
+				i {
+					padding-left: 10px;
+					font-size: 18px;
+					font-weight: 400;
+				}
+			}
+
+			.position {
+				font-size: 14px;
+				color: $color_04;
+
+			}
+
+			.detail_info {
+				margin-top: 6px;
+				p {
+					display: inline-block;
+					font-size: 14px;
+					color: $color_05;
+					margin-right: 3px;
+
+					span {
+						color: #0071F5;
+					}
+				}
+			}
+		}
+	}	
+
+	.bottom_cnt {
+		padding-top: 20px;
+		padding-bottom: 40px;
+		.price {
+			p {
+				text-align: right;
+				color: $color_05;
+				font-size: 14px;
+			}
+
+			> div {
+				margin-top: 5px;
+				margin-bottom: 35px;
+				position: relative;
+				span {
+					@include position_var;
+					font-size: 16px;
+					color: $color_05;
+				}
+
+				p {
+					font-size: 30px;
+					font-weight: 700;
+					color: #000000;
+				}
+			}
+		}
+
+		.content {
+			p {
+				font-size: 16px;
+			}
+	
+			.btn {
+				margin-top: 20px;
+				text-align: right;
+	
+				button {
+					font-size: 14px;
+					color: #0071F5;
+				}
+			}
+		}
+	
+		.btn_wrap.blue {
+			margin-top: 55px;
+		}
+	}
+
+
+
+}
+
+
+// blue 버튼
+.btn_wrap.blue {
+	@include display_varible;
+	width: 100%; height: 50px;
+	background-color: #0071F5;
+
+	button {
+		font-size: 14px;
+		color: #ffffff;
+	}
+}
+
+
+.estimate_doc_wrap {
+	> div {
+		padding-top: 30px;
+		padding-bottom: 30px;
+		background-color: #ffffff;
+	}
+
+	div > .sum_wrap {
+		padding-top: 14px;
+		position: relative;
+		box-sizing: border-box;
+		padding-left: 30px;
+		border-top: 1px solid #eeeeee;
+		margin-bottom: 56px;
+		span {
+			@include position_var;
+			font-size: 16px;
+			color: $color_05;
+		}
+
+		p {
+			font-size: 30px;
+			font-weight: 700;
+			color: #000000;
+			text-align: right;
+		}
+	
+	}
+
+}
+
+table.estimate_doc_table {
+	thead th {
+		padding: 8px 0;
+		background-color: #F8F8F8;
+		border-top: 1px solid $color_02;
+		border-bottom: 1px solid $color_02;
+		width: 50%;
+		font-size: 14px;
+	}
+
+	tbody td {
+		font-size: 14px;
+		width: 50%;
+		word-break:break-all;
+		padding: 8px 0;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		
+		&.price {
+			text-align: right;
+			text-overflow: auto;
+		}
+	}
+}
 
 
 
