--- a/css/style.css
+++ b/css/style.css
@@ -5458,6 +5458,7 @@ p.original_price {
   width: 100%;
   height: 50px;
   background-color: #0071F5;
+  border-radius: 5px;
 }
 .btn_wrap.blue button {
   font-size: 14px;
@@ -5511,6 +5512,123 @@ table.estimate_doc_table tbody td {
 table.estimate_doc_table tbody td.price {
   text-align: right;
   text-overflow: auto;
+}
+
+.estimate_register .container {
+  padding-top: 25px;
+  padding-bottom: 40px;
+  background-color: #ffffff;
+}
+.estimate_register .add_btn {
+  width: 100%;
+  height: 45px;
+  line-height: 45px;
+  background-color: #cccccc;
+  border-radius: 5px;
+  color: #ffffff;
+  font-size: 14px;
+  text-align: center;
+}
+.estimate_register .add_btn > div {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+  border-radius: 16px;
+  border: 1px solid #Ffffff;
+}
+.estimate_register .add_btn > div i {
+  font-size: 12px;
+  font-weight: 400;
+}
+.estimate_register .complete_list {
+  position: relative;
+  margin-top: 30px;
+  margin-bottom: 15px;
+  background-color: #f8f8f8;
+  border-radius: 5px;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  padding: 15px 35px 15px 15px;
+}
+.estimate_register .complete_list .cnt {
+  font-size: 14px;
+  color: #666666;
+}
+.estimate_register .complete_list .cnt .price {
+  margin-top: 10px;
+  font-weight: 700;
+}
+.estimate_register .complete_list button {
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  transform: translateY(-50%);
+}
+.estimate_register .complete_list button i {
+  font-size: 18px;
+  color: #cccccc;
+}
+.estimate_register .input_list {
+  position: relative;
+  padding-right: 40px;
+  overflow: hidden;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+  border: 1px solid #eeeeee;
+  border-radius: 5px;
+}
+.estimate_register .input_list .input_wrap > input {
+  border: none;
+  border-radius: 0;
+}
+.estimate_register .input_list .input_wrap > input:first-child {
+  border-bottom: 1px solid #eeeeee;
+}
+.estimate_register .input_list .remove_btn_wrap {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  width: 40px;
+  height: 100%;
+  background-color: #eeeeee;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.estimate_register .input_list .remove_btn_wrap span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 24px;
+  background-color: #cccccc;
+}
+.estimate_register .input_list .remove_btn_wrap span i {
+  font-weight: 400;
+  font-size: 14px;
+  color: #ffffff;
+}
+
+.botton_sum_wrap {
+  background-color: #0071F5;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.botton_sum_wrap p {
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 22px;
 }
 
 /*# sourceMappingURL=style.css.map */
