--- a/css/style.scss
+++ b/css/style.scss
@@ -6012,6 +6012,7 @@ p.original_price {
 	@include display_varible;
 	width: 100%; height: 50px;
 	background-color: #0071F5;
+	border-radius: 5px;
 
 	button {
 		font-size: 14px;
@@ -6076,7 +6077,119 @@ table.estimate_doc_table {
 	}
 }
 
+.estimate_register {
+	.container {
+		padding-top: 25px;
+		padding-bottom: 40px;
+		background-color: #ffffff;
+	}
+	.add_btn {
+		 width: 100%; height: 45px;
+		 line-height: 45px;
+		 background-color: $color_02;
+		 border-radius: 5px;
+		 color: #ffffff;
+		 font-size: 14px;
+		 text-align: center;
+		 
+		 > div {
+			@include display_varible($display: inline-flex);
+			@include circle_img ($width: 16px, $height: 16px, $border-radius: 16px);
+			border: 1px solid #Ffffff;
 
+			i {
+				font-size: 12px;
+				font-weight: 400;
+			}
+		 }
+	}
+
+	.complete_list {
+		position: relative;
+		margin-top: 30px;
+		margin-bottom: 15px;
+		background-color: #f8f8f8;
+		border-radius: 5px;
+		border: 1px solid #eeeeee;
+		box-sizing: border-box;
+		padding: 15px 35px 15px 15px;
+
+		.cnt {
+			font-size: 14px;
+			color: $color_05;
+
+			.price {
+				margin-top: 10px;
+				font-weight: 700;
+			}
+		}
+
+		button {
+			position: absolute;
+			top: 50%; right: 15px;
+			transform: translateY(-50%);
+
+			i {
+				font-size: 18px;
+				color: #cccccc;
+			}
+		}
+	}
+
+	.input_list {
+		position: relative;
+		padding-right: 40px;
+		overflow: hidden;
+		margin-bottom: 15px;
+		box-sizing: border-box;
+		border: 1px solid #eeeeee;
+		border-radius: 5px;
+
+		.input_wrap > input {
+			border: none;
+			border-radius: 0;
+
+			&:first-child {
+				border-bottom: 1px solid #eeeeee;
+			}
+		}
+
+		.remove_btn_wrap {
+			position: absolute;
+			top: 50%; right: 0;
+			transform: translateY(-50%);
+			width: 40px; height: 100%;
+			background-color: #eeeeee;
+			@include display_varible;
+
+			span {
+				@include display_varible;
+				@include circle_img ($width: 24px, $height: 24px, $border-radius: 24px);
+				background-color: $color_02;
+
+				i {
+					font-weight: 400;
+					font-size: 14px;
+					color: #ffffff;
+				}
+			}
+		}
+	}
+}
+
+.botton_sum_wrap {
+	background-color: #0071F5;
+	position: fixed;
+	bottom: 0; left: 0; right: 0;
+	width: 100%; height: 60px;
+	@include display_varible;
+
+	p {
+		color: #ffffff;
+		font-weight: 500;
+		font-size: 22px;
+	}
+}
 
 
 
