--- a/css/style.scss
+++ b/css/style.scss
@@ -6198,6 +6198,156 @@ table.estimate_doc_table {
 	}
 }
 
+.qrList_wrap {
+	.top_area {
+		background-color: #ffffff;
+		padding-top: 25px;
+		padding-bottom: 15px;
+		box-sizing: border-box;
+		border-bottom: 1px solid #eeeeee;
+		> div {
+
+			@include display_varible($justify-content: space-between);
+
+			select {
+				position: relative;
+				width: 38%; height: 40px;
+				background: url(../img/bottom_arrow.svg) no-repeat top 16px right 12px;
+			}
+
+
+			.search_wrap {
+				position: relative;
+				box-sizing: border-box;
+				width: 60%;
+				.icon {
+					position: absolute;
+					@include position_var;
+					@include display_varible;
+					width: 42px; height: 100%;
+					opacity: 0.5;
+				}
+				input {
+					height: 40px;
+					box-sizing: border-box;
+					padding: 0.2rem 1rem 0.2rem 2.5rem;
+				}
+			}
+
+		}
+
+	}
+
+	.bottom_area {
+		padding-top: 15px;
+	}
+	.qrlist_container {
+		.list {
+			position: relative;
+			height: auto;
+			border: 1px solid #eeeeee;
+			border-radius: 5px;
+			margin-bottom: 10px;
+
+			.tit {
+				position: relative;
+				font-size: 14px;
+				font-weight: 700;
+				padding: 10px 14px;
+				border-bottom: 1px solid #eeeeee;
+				background-color: #fafafa;
+
+				button {
+					@include position_var($left: auto);
+					right: 14px;
+					font-size: 12px;
+					color: #0071F5;
+
+
+					i {
+						display: inline-block;
+						margin-left: 4px;
+						font-size: 10px;
+						font-weight: 400
+					}
+				}
+			}
+
+
+			> .cnt {
+				padding: 20px 14px;
+				.info > div {
+					width: 100%;
+					@include display_varible;
+					margin-bottom: 8px;
+					span {
+						display: inline-block;
+						text-align: left;
+						width: 30%;
+						color: $color_05;
+					}
+					strong {
+						width: 70%;
+						text-align: right;
+					}
+					&:last-child {
+						margin-bottom: 0;
+					}
+				}
+
+			}
+
+			.qr_info {
+				margin-top: 15px;
+				@include display_varible($justify-content: flex-start);
+				line-height: initial;
+
+				> .cnt {
+					color: $color_03;
+
+					span {
+						&:first-child {
+							position: relative;
+							padding-right: 10px;
+
+							&::after {
+								content: '';
+								@include position_var($left: auto);
+								right: 0;
+								width: 1px; height: 12px;
+								background-color: $color_03;
+							}
+						}
+						&:last-child {
+							padding-left: 10px;
+						}
+					}
+				}
+
+				> .refresh {
+					@include display_varible;
+					width: 18px; height: 18px;
+					border-radius: 18px;
+					background-color: $color_03;
+					margin-left: 5px;
+					cursor: pointer;
+
+					i {
+						font-size: 10px;
+						font-weight: 400;
+						color: #ffffff;
+					}
+				}
+			}
+		}
+	}
+}
+
+
+
+
+
+
 
 
 
