--- a/css/style.css
+++ b/css/style.css
@@ -5778,4 +5778,74 @@ table.estimate_doc_table tbody td.price {
   color: #ffffff;
 }
 
+.review_wrap .review_product_info {
+  position: relative;
+  margin: 10px 0;
+  background-color: #ffffff;
+  box-sizing: border-box;
+  padding: 20px 14px 20px 80px;
+  border-top: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+}
+.review_wrap .review_product_info .img {
+  position: absolute;
+  top: 20px;
+  left: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 55px;
+  height: 55px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.review_wrap .review_product_info .img > img {
+  max-height: 100%;
+}
+.review_wrap .review_product_info .detail {
+  min-height: 55px;
+}
+.review_wrap .review_product_info .detail .name {
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+.review_wrap .review_product_info .detail .option {
+  font-size: 12px;
+  color: #8B8B8B;
+}
+.review_wrap .review_write {
+  background-color: #ffffff;
+  border-top: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+}
+.review_wrap .review_write .sum {
+  padding-top: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.review_wrap .review_write .sum p {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 22px;
+}
+.review_wrap .review_write .sum .star > div {
+  display: inline-flex;
+  width: 30px;
+  height: 28px;
+  background: url(../img/review_icon.png) no-repeat 0 0;
+  margin-bottom: 45px;
+}
+.review_wrap .review_write .sum .star > div.full {
+  background-position: -61px 0;
+}
+.review_wrap .review_write .sum .star > div.half {
+  background-position: -31px 0;
+}
+.review_wrap .review_write textarea {
+  height: 110px;
+  padding: 1rem;
+}
+
 /*# sourceMappingURL=style.css.map */
