--- a/css/style.scss
+++ b/css/style.scss
@@ -1141,6 +1141,7 @@ span.date {
 					.product_name {
 						color: $color_05;
 						margin: 7px 0;
+						word-break: break-all;
 					}
 
 					.Ratings {
@@ -4125,6 +4126,20 @@ p.original_price {
 	background: url(../img/map.png) no-repeat center center;
 	background-size: cover;
 
+	> .current_position {
+		position: absolute;
+		top: 50px; right: 14px;
+		background-color: #ffffff;
+		@include circle_img ($width: 30px, $height: 30px, $border-radius: 5px);
+		box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.25);
+		@include display_varible;
+		cursor: pointer;
+
+		img {
+			max-width: 100%;
+		}
+	}
+
 	.position_search_input {
 		margin-top: 56px;
 		box-shadow: 2px 2px 6px -1px rgba(0, 0, 0, 0.25);
@@ -4132,6 +4147,74 @@ p.original_price {
 			background-color: #ffffff;
 		}
 	}
+
+	.me_position {
+		position: absolute;
+		top: 50%; left: 50%;
+		@include circle_img($width: 18px, $height: 18px, $border-radius: 18px);
+		background-color: #ffffff;
+		box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.25);
+		@include display_varible;
+
+		> span {
+			display: inline-block;
+			@include circle_img($width: 14px, $height: 14px, $border-radius: 14px);
+			background-color: #FE354D;
+		}
+	}
+
+	.around_store_position {
+		position: absolute;
+		top: 50%; left: 40%;
+
+		.marker {
+			color: #FE354D;
+			font-size: 40px;
+			text-shadow: 1px 2px 2px rgb(0 0 0 / 30%);
+		}
+
+		.store {
+			position: absolute;
+			top: 24%; left: 50%;
+			transform: translateX(-50%);
+			color: #ffffff;
+			font-size: 15px;
+		}
+
+		.name_wrap {
+			position: absolute;
+			top: -42px; left: 50%;
+			transform: translateX(-50%);
+
+			> .store_name {
+				background-color: #ffffff;
+				border-radius: 5px;
+				padding: 0.5rem 1rem;
+				box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.25);
+				p {
+					font-size: 12px;
+					font-weight: 600;
+					white-space: nowrap;
+				}
+			}
+
+			> .arrow {
+				position: absolute;
+				bottom: -12px; left: 50%;
+				transform: translateX(-50%);
+				width: 100%;
+				text-align: center;
+
+				> i {
+					font-size: 20px;
+					color: #ffffff;
+					text-shadow: 1px 2px 2px rgb(0 0 0 / 30%);
+				}
+			}
+		}
+
+	}
+
 }
 
 // 주문내역 css @mixin image_wrap
@@ -6483,6 +6566,94 @@ table.estimate_doc_table {
 	}
 
 }
+
+/* 전체 상품리스트 css */
+.product_all_list {
+
+	> div {
+		background-color: #ffffff;
+	}
+	> .recommend_prodcut {
+		margin-bottom: 10px;
+		padding: 30px 0 20px 14px;
+
+		h3 {
+			font-size: 16px;
+			font-weight: bold;
+			padding: 12px 0px;
+		}
+
+		.listwrap {
+			margin-left: 0;
+		}
+	}
+
+	> .product_list {
+		h3 {
+			font-size: 16px;
+			font-weight: bold;
+			padding: 12px 15px;
+		}
+
+		.list_wrap {
+			padding-top: 23px;
+			display: flex;
+			align-items: flex-start;
+			flex-wrap: wrap;
+			justify-content: space-between;
+
+			> div:nth-child(2n) {
+				margin-left: 1%;
+			}
+
+			.list {
+				width: 49%; height: 286px;
+				.img {
+					width: 100%;
+					height: 167px;
+					border-radius: 5px;
+					@include display_varible;
+					overflow: hidden;
+					background-color: $color_01;
+					img {
+						max-height: 100%;
+					}
+				}
+				.product_name {
+					color: $color_05;
+					margin: 7px 0;
+					word-break: keep-all;
+				}
+
+				.Ratings {
+					font-size: 0;
+					margin-bottom: 5px;
+					> div {
+						display: inline-flex;
+						margin-left: 1px;
+						width: 10px; height: 10px;
+						background: url(../img/product_star.png) no-repeat -22px 0;
+						background-image: -webkit-image-set(url(../img/product_star.png) 1x, url(../img/product_star@2x.png) 2x, url(../img/product_star@3x.png) 3x);
+
+						&.full {
+							background-position: 0 0;
+						}
+
+						&.half {
+							background-position: -11px 0;
+						}
+					}
+				}
+			}
+		}
+
+	}
+
+}
+
+
+
+
 
 
 
